all/network/test/ingress-controller.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: myapp-ingress
  namespace: default
spec:
  rules:
  - host:   
    http:
      paths:
      - backend:
          serviceName: mongo-express-service
          servicePort: 4200
